Trying to fix the Roboto font not showing up on certain devices

--- a/test/css/materialize.css
+++ b/test/css/materialize.css
@@ -2248,7 +2248,7 @@
  *    without disabling user zoom.
  */
 html {
-  font-family: sans-serif;
+  font-family: "Roboto", sans-serif;
   /* 1 */
   -ms-text-size-adjust: 100%;
   /* 2 */
